# salome-mcp

./: .gitignore  .mcp.json  README.md  main.py  pyproject.toml  salome_bridge.py
openfoam_cases/sthx_chtMultiRegionSimpleFoam/: Allclean  Allrun-parallel  Allrun.pre  log.checkMesh.shell_side_fluid  log.checkMesh.tube_side_fluid  log.ideasUnvToFoam  log.splitMeshRegions
openfoam_cases/sthx_chtMultiRegionSimpleFoam/0.orig/shell_side_fluid/: T  epsilon  k  p  p_rgh
openfoam_cases/sthx_chtMultiRegionSimpleFoam/0.orig/tube_side_fluid/: U  alphat  epsilon  nut  p  p_rgh
openfoam_cases/sthx_chtMultiRegionSimpleFoam/0/shell_side_fluid/: U  alphat  nut
openfoam_cases/sthx_chtMultiRegionSimpleFoam/0/tube_side_fluid/: T  k
openfoam_cases/sthx_chtMultiRegionSimpleFoam/constant/: cellToRegion  regionProperties
openfoam_cases/sthx_chtMultiRegionSimpleFoam/constant/polyMesh/: boundary  cellZones  faces  neighbour  owner  points
openfoam_cases/sthx_chtMultiRegionSimpleFoam/constant/shell_side_fluid/: fvOptions
openfoam_cases/sthx_chtMultiRegionSimpleFoam/constant/tube_side_fluid/: radiationProperties  turbulenceProperties
openfoam_cases/sthx_chtMultiRegionSimpleFoam/mesh/: README.txt
openfoam_cases/sthx_chtMultiRegionSimpleFoam/system/: controlDict
openfoam_cases/sthx_chtMultiRegionSimpleFoam/system/domain0/: fvSchemes  fvSolution
salome_plugin/: mcp_port_plugin.py  salome_plugins.py
src/salome_mcp/: __init__.py  server.py
src/salome_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+129 files in other folders)
