[project]
name = "salome-mcp"
version = "0.1.0"
description = "SALOME integration through the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Ganesh Balaji"}
]
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.3.0",
]

[project.scripts]
salome-mcp = "salome_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[project.urls]
"Homepage" = "https://github.com/gnshb/salome-mcp"
"Repository" = "https://github.com/gnshb/salome-mcp"
"Bug Tracker" = "https://github.com/gnshb/salome-mcp/issues"
